<resources>
    <string name="app_name">Sunflower</string>
    <string name="app_refresh">refresh</string>
    <string name="app_retry">retry</string>
    <string name="app_settings">Settings</string>
    <string name="app_pref_general_title_test">演示标题</string>
    <string name="app_pref_general_summary_test">演示副标题</string>
    <string name="app_pref_general_key_category_test">key_category_test</string>
    <string name="app_pref_general_key_test_item1">key_test_item_one</string>
    <string name="app_pref_general_title_test_item1">第一项标题</string>
    <string name="app_pref_general_summary_test_summary1">第一项副标题</string>
    <string name="app_pref_general_key_test_item2">key_test_item_two</string>
    <string name="app_pref_general_title_test_item2">第二项标题</string>
    <string name="app_pref_general_summary_test_summary2">第二项副标题</string>
    <string name="app_pref_general_key_test_item3">key_test_item_three</string>
    <string name="app_pref_general_title_test_item3">第三项标题</string>
    <string name="app_pref_general_summary_test_summary3">第三项副标题</string>
    <string name="app_pref_general_key_test_check1">key_check_one</string>
    <string name="app_pref_general_title_test_check1">第一选择框标题</string>
    <string name="app_pref_general_summary_test_check1">第一选择框副标题</string>
    <string name="app_pref_general_key_test_check2">key_check_two</string>
    <string name="app_pref_general_title_test_check2">第二选择框标题</string>
    <string name="app_pref_general_summary_test_check2">第二选择框副标题</string>
    <string name="app_pref_general_key_test_edit1">key_edit_one</string>
    <string name="app_pref_general_title_test_edit1">输入框标题</string>
    <string name="app_pref_general_summary_test_edit1">输入框副标题</string>
    <string name="app_pref_general_key_test_list1">key_list_one</string>
    <string name="app_pref_general_title_test_list1">第一列表标题</string>
    <string name="app_pref_general_summary_test_list1">第一列表副标题</string>
    <string name="app_pref_general_key_test_list2">key_list_two</string>
    <string name="app_pref_general_title_test_list2">第二列表标题</string>
    <string name="app_pref_general_summary_test_list2">第二列表副标题</string>
    <string name="app_pref_general_key_test_switch1">key_switch_one</string>
    <string name="app_pref_general_summary_test_switch1">开关副标题</string>
    <string name="app_pref_general_summary_test_switch1_off">关闭副标题</string>
    <string name="app_pref_general_summary_test_switch1_on">打开副标题</string>
    <string name="app_pref_general_title_test_switch1">开关标题</string>
    <string name="app_pref_general_key_test_dropdown1">key_dropdown_one</string>
    <string name="app_pref_general_summary_test_dropdown1">下拉副标题</string>
    <string name="app_pref_general_title_test_dropdown1">下拉标题</string>
    <string name="app_pref_general_key_test_seekbar1">key_seekbar_one</string>
    <string name="app_pref_general_summary_test_seekbar1">进度条副标题</string>
    <string name="app_pref_general_title_test_seekbar1">进度条标题</string>
</resources>